# OpenAGS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.py  start.py  start_backen.py  start_backend.py  start_ui.py  turbo.json
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
config/: research_projects.yml
desktop/: electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
desktop/resources/: icon.icns
docs/: architecture.md  refactoring-plan.md  todo.md  workflow-protocol.md
docs/design/: api-reference.md
docs/i18n/: README_AR.md  README_DE.md  README_FR.md  README_JA.md  README_ZH.md
gscientist/: __init__.py  project_manager.py
gscientist/agents/: agent.py  agent_factory.py  agent_registry.py  base_agent.py  chat_agent.py  gs_agent.py  scisearch_agent.py
gscientist/backend/: __init__.py  app.py
gscientist/core/: __init__.py  projects.py
gscientist/references/: __init__.py  paper.py  references_manager.py
gscientist/server/: __init__.py  agent_service.py  app.py  main.py  models.py
openags/: __init__.py  __main__.py  main.py  models.py
openags/agent/: __init__.py  auto_memory.py  backend.py  directive.py  discovery.py  errors.py  hooks.py  llm.py  loop.py  memory.py  message_bus.py  plugins.py  session.py  soul.py  status.py  task_list.py  worktree.py
openags/research/: __init__.py  adapter.py  auth.py  bot.py  cli.py  cli_session.py  config.py  orchestrator.py  project.py  registry.py  templates.py
skills/research-workflow/: SKILL.md
skills/search-papers/: SKILL.md
skills/verify-citations/: SKILL.md
templates/default/: SOUL.md  STATUS.md  TASKS.md  memory.md
tests/: conftest.py  test_agent_factory.py  test_api.py  test_gs_agent.py  test_models.py  test_phase2.py  test_project_manager.py  test_streaming.py
tests/test_agents/: test_base.py  test_standalone.py
tests/test_core/: test_auth.py  test_checkpoints.py  test_config.py  test_memory.py  test_memory_concurrent.py  test_message_bus.py  test_orchestrator_integration.py  test_project.py
tests/test_experiment/: test_experiment.py
tests/test_messaging/: test_bot.py  test_channels.py
tests/test_rag/: test_rag.py
tests/test_research/: test_adapter.py
tests/test_server/: test_routes.py  test_server.py  test_sessions.py
tests/test_skills/: test_skills.py
tests/test_tools/: test_citation_verify.py  test_fetch.py  test_registry_integration.py  test_tools.py  test_workspace_tools.py
(+166 files in other folders)
